--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.11",
     "@vercel/analytics": "^1.5.0",
-    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
